Dark Mode on every Page Added and Minor corrections on positioning on the elements

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -21,8 +21,29 @@ a:hover {
 	color: var(--secondary-green) !important;
 }
 
+h5:after {
+	content: '';
+	position: absolute;
+	height: 2px;
+	width: 250px;
+	background-color: var(--secondary-green);
+	bottom: -20px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+h2:after {
+	content: '';
+	position: absolute;
+	height: 2px;
+	width: 150px;
+	background-color: var(--secondary-green);
+	bottom: -20px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
 #main-menu {
-	background-color: var(--primary-dark) !important;
+	background-color: var(--primary-dark);
 }
 
 .nav-item {
@@ -46,11 +67,95 @@ a:hover {
 	left: 0;
 }
 
+#toggler {
+	color: var(--secondary-green);
+}
+
+/* DARK MODE */
+#mode-trigger {
+	position: absolute;
+	right: 10px;
+	top: 20px;
+}
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(53px);
+}
+
+.label {
+	background-color: #111;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 5px;
+	border-radius: 50px;
+	height: 26px;
+	width: 80px;
+	position: relative;
+}
+
+.fa-moon {
+	color: #f1c40f;
+}
+
+.fa-sun {
+	margin-left: auto;
+	color: #f39c12;
+}
+
+.ball {
+	width: 24px;
+	height: 24px;
+	background-color: #fff;
+	position: absolute;
+	top: 1px;
+	left: 2px;
+	border-radius: 50%;
+	transition: transform 0.2s linear;
+}
+
+body.light {
+	background-color: #fff !important;
+	color: #111 !important;
+}
+
+#main-menu.light {
+	background-color: #fff !important;
+	color: #111 !important;
+}
+
+#main-menu.light a {
+	color: #111 !important;
+}
+
 /* HEADER COMPONENT */
 
 .project-bg {
 	min-height: 60vh;
-	background-image: url('../img/Projects/lile-portfolio/lile-mockup.png');
+	background-image: url('../img/Projects/lile-portfolio/img/lile-mockup.png');
+	background-position: bottom;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.project-bg-herbalife {
+	min-height: 60vh;
+	background-image: url('../img/Projects/herbalife/jane-mockup.png');
+	background-position: bottom;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.project-bg-onofo {
+	min-height: 60vh;
+	background-image: url('../img/Projects/onofo/multiple-devices.png');
 	background-position: bottom;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -83,6 +188,12 @@ a:hover {
 
 .logo-container {
 	border-right: 2px solid var(--secondary-green);
+	display: flex;
+	justify-content: center;
+}
+.logo-container img {
+	max-width: 100px;
+	margin: 20px auto;
 }
 
 .description-card {
@@ -152,4 +263,14 @@ a:hover {
 .circle-filled {
 	background-color: #222222;
 	transition: 0.5s ease;
+}
+
+/* MORE PROJECTS */
+
+.more-projects img {
+	transition: linear 0.5s;
+}
+.more-projects:hover img {
+	transform: scale(1.05);
+	transition: linear 0.5s;
 }
